[gd_scene load_steps=8 format=2]

[ext_resource path="res://Character/Character_old.gd" type="Script" id=1]
[ext_resource path="res://laser/PlayerLaser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character/CharacterSide.png" type="Texture" id=3]
[ext_resource path="res://Character/Gun.png" type="Texture" id=4]
[ext_resource path="res://Player/Sounds.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.9164, 34.8562 )

[sub_resource type="Animation" id=2]
resource_name = "hurt"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Character" type="Area2D"]
collision_mask = 14
script = ExtResource( 1 )
laser = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GunRotPoint" type="Position2D" parent="."]
position = Vector2( 0, 5 )

[node name="Sprite" type="Sprite" parent="GunRotPoint"]
position = Vector2( 25, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )

[node name="GunPowerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sounds" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Character_body_entered"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
